html + css finalisés v2

--- a/photographer.html
+++ b/photographer.html
@@ -148,6 +148,14 @@
 
         </div>
       </div>
+
+      <div class="encart-CTA-responsive">Contactez-moi</div>
+      <div class="infos-globales">          
+        <p class="like">297 081&nbsp; &nbsp;   <i class="fas fa-heart"></i></p> 
+      
+        <p class="tarif">300€ / jour</p>
+
+      </div>
     </main>
     <footer></footer>
   </body>
